--- a/subdirectory/stack2.yml
+++ b/subdirectory/stack2.yml
@@ -4,3 +4,5 @@ services:
   image: nats
   env_file:
    - ../deep-directory/deep-directory/deep-directory/deep-directory/deep-directory/stack.env
+  environment:
+   - ${ENV:-hello}=hi
