--- a/stack2.yml
+++ b/stack2.yml
@@ -1,6 +1,8 @@
 version: '3'
 services:
  stack-yml:
-  image: nats
+  image: ${IMAGE:-nats}
+  tty: true
+  stdin_open: true
   env_file:
    - subdirectory/stack-sub-directory.env
